tests/snapshots/test_uigen_examples__customwidget_main_dialog-2.snap
---
source: tests/test_uigen_examples.rs
expression: ui_support_h
---
#pragma once
#include "ui_maindialog.h"

namespace UiSupport {
class MainDialog
{
public:
    MainDialog(QDialog *root, Ui::MainDialog *ui): root_(root), ui_(ui) {}

    void setup()
    {
    }

private:
    enum class BindingIndex : unsigned {
    };

    QDialog *const root_;
    Ui::MainDialog *const ui_;

};
} // namespace UiSupport

