tests/snapshots/test_uigen_examples__customwidget_main_dialog.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/customwidget/MainDialog.qml\").unwrap()"
---
<ui version="4.0">
 <class>MainDialog</class>
 <widget class="QDialog" name="dialog">
  <layout class="QVBoxLayout" name="vboxLayout">
   <item>
    <widget class="SettingsForm" name="settingsForm">
    </widget>
   </item>
   <item>
    <widget class="MyDialogButtonBox" name="buttonBox">
    </widget>
   </item>
   <item>
    <widget class="MyDialogButtonBox" name="buttonBox2">
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SettingsForm</class>
   <extends>QWidget</extends>
   <header>settingsform.h</header>
  </customwidget>
  <customwidget>
   <class>MyDialogButtonBox</class>
   <extends>QDialogButtonBox</extends>
   <header>mydialogbuttonbox.h</header>
  </customwidget>
 </customwidgets>
</ui>

