tests/snapshots/test_uigen_examples__main_window-2.snap
---
source: tests/test_uigen_examples.rs
expression: ui_support_h
---
#pragma once
#include "ui_mainwindow.h"

namespace UiSupport {
class MainWindow
{
public:
    MainWindow(QMainWindow *root, Ui::MainWindow *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupFormStackCurrentIndex();
        this->setupMainWindowWindowTitle();
        this->updateFormStackCurrentIndex();
        this->updateMainWindowWindowTitle();
    }

private:
    enum class BindingIndex : unsigned {
        FormStackCurrentIndex,
        MainWindowWindowTitle,
    };

    void setupFormStackCurrentIndex()
    {
        QObject::connect(this->ui_->fileNameEdit, &QComboBox::currentIndexChanged, root_, [this]() { this->updateFormStackCurrentIndex(); });
    }

    void updateFormStackCurrentIndex()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::FormStackCurrentIndex);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->formStack->setCurrentIndex(this->evalFormStackCurrentIndex());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    int evalFormStackCurrentIndex() const
    {
        int a0;
    b0:
        a0 = this->ui_->fileNameEdit->currentIndex();
        return a0;
    }

    void setupMainWindowWindowTitle()
    {
        QObject::connect(this->ui_->fileNameEdit, &QComboBox::currentIndexChanged, root_, [this]() { this->updateMainWindowWindowTitle(); });
        QObject::connect(this->ui_->fileNameEdit, &QComboBox::currentTextChanged, root_, [this]() { this->updateMainWindowWindowTitle(); });
    }

    void updateMainWindowWindowTitle()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::MainWindowWindowTitle);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setWindowTitle(this->evalMainWindowWindowTitle());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalMainWindowWindowTitle() const
    {
        int a0;
        bool a1;
        QString a2;
        QString a3;
        QString a4;
        QString a5;
        QString a6;
    b0:
        a0 = this->ui_->fileNameEdit->currentIndex();
        a1 = a0 == 0;
        if (a1)
            goto b1;
        else
            goto b2;
    b1:
        a2 = QCoreApplication::translate("MainWindow", "*** Select Source ***");
        a4 = a2;
        goto b3;
    b2:
        a3 = this->ui_->fileNameEdit->currentText();
        a4 = a3;
        goto b3;
    b3:
        a5 = QCoreApplication::translate("MainWindow", "Qmluic Example: %1");
        a6 = a5.arg(a4);
        return a6;
    }

    QMainWindow *const root_;
    Ui::MainWindow *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

