tests/snapshots/test_uigen_examples__main_window.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/MainWindow.qml\").unwrap()"
---
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow">
  <property name="geometry">
   <rect>
    <height>600</height>
    <width>800</width>
    <x>0</x>
    <y>0</y>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
  </widget>
  <widget class="QMenuBar" name="menubar">
   <addaction name="menu_1"/>
   <addaction name="menu_2"/>
   <addaction name="menu_3"/>
   <widget class="QMenu" name="menu_1">
    <property name="title">
     <string>&amp;File</string>
    </property>
    <addaction name="action_Open"/>
    <addaction name="separator"/>
    <addaction name="action_Quit"/>
   </widget>
   <widget class="QMenu" name="menu_2">
    <property name="title">
     <string>&amp;Edit</string>
    </property>
    <addaction name="action_Undo"/>
    <addaction name="action_Redo"/>
   </widget>
   <widget class="QMenu" name="menu_3">
    <property name="title">
     <string>&amp;Help</string>
    </property>
    <addaction name="action_About"/>
    <addaction name="separator"/>
    <addaction name="menu_0"/>
    <action name="action_About">
     <property name="icon">
      <iconset>
       <normaloff>app.png</normaloff>
      </iconset>
     </property>
     <property name="text">
      <string>&amp;About</string>
     </property>
    </action>
    <widget class="QMenu" name="menu_0">
     <property name="title">
      <string>&amp;Developer tools</string>
     </property>
     <addaction name="action_0"/>
     <action name="action_0">
      <property name="text">
       <string>&amp;Console</string>
      </property>
     </action>
    </widget>
   </widget>
  </widget>
  <widget class="QToolBar">
   <addaction name="action_Open"/>
   <addaction name="separator"/>
   <addaction name="action_Undo"/>
   <addaction name="action_Redo"/>
   <addaction name="separator"/>
   <addaction name="action_About"/>
  </widget>
  <widget class="QStatusBar" name="statusbar">
  </widget>
  <action name="action_Open">
   <property name="icon">
    <iconset theme="document-open">
    </iconset>
   </property>
   <property name="shortcut">
    <enum>QKeySequence::Open</enum>
   </property>
   <property name="text">
    <string>&amp;Open</string>
   </property>
  </action>
  <action name="action_Quit">
   <property name="shortcut">
    <string notr="true">Ctrl+X, Ctrl+C</string>
   </property>
   <property name="text">
    <string>&amp;Quit</string>
   </property>
  </action>
  <action name="action_Undo">
   <property name="icon">
    <iconset theme="edit-undo">
    </iconset>
   </property>
   <property name="text">
    <string>&amp;Undo</string>
   </property>
  </action>
  <action name="action_Redo">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset theme="edit-redo">
    </iconset>
   </property>
   <property name="text">
    <string>&amp;Redo</string>
   </property>
  </action>
  <action name="actionFoo">
   <property name="text">
    <string>Foo</string>
   </property>
  </action>
 </widget>
</ui>

