tests/snapshots/test_uigen_examples__static_item_model-2.snap
---
source: tests/test_uigen_examples.rs
expression: ui_support_h
---
#pragma once
#include "ui_staticitemmodel.h"

namespace UiSupport {
class StaticItemModel
{
public:
    StaticItemModel(QWidget *root, Ui::StaticItemModel *ui): root_(root), ui_(ui) {}

    void setup()
    {
    }

private:
    QWidget *const root_;
    Ui::StaticItemModel *const ui_;

};
} // namespace UiSupport

